# django-dynamic-host

./: .gitignore  CONTRIBUTION.md  LICENCE  README.md  README.rst  pyproject.toml
dynamic_host/: conf.py  helpers.py  middleware.py
dynamic_host/tests/: test_middleware.py  test_resolver.py  test_settings.py
