[build-system]
requires =  ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dynamic-host"
authors = [
    {name = "John Goodnews Osonwa", email = "goodnewsj62@gmail.com"},
]
description = "Django dynamic host helps you validate hostname(origin of client) trying to reach your application dynamically. Django dynamic host helps by-pass the ALLOWED_HOST settings which is restricted to a constant manually added value of hostnames."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
version = "0.0.1"
dependencies = [
    "Django>=3.2",
    'importlib-metadata; python_version>="3.7"',
]